# regolith

./: .gitignore  Cargo.toml  README.md  compile_all.py  notes.md  rust_compile_all.py
compiler/: regolith.py
examples/: ast.md  batman.md  batman.reg  campfire.md  campfire.reg  choir_test.md  choir_test.reg  choir_test_two.md  dynamics.md  dynamics.reg  hbjm.md  hbjm.reg  heart_and_soul.md  heart_and_soul.reg  mariah.md  mariah.reg  regularity.md  regularity.reg  scales.md  scales.reg  soundofmusic.md  soundofmusic.reg  thelionsleepstonight.md  thelionsleepstonight.reg
src/: codegen.rs  compiler.rs  lexer.rs  lib.rs  main.rs  moonbase.rs  parser.rs  semantics.rs  types.rs
