[package]
name = "regolith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argparse = "0.2.2"
fraction = "0.14.0"
indoc = "2.0.5"
md5 = "0.7.0"
regex = "1.10.2"
regex-macro = "0.2.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
