[package]
name = "regolith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argparse = "0.2.2"
colored = "2.1.0"
fraction = "0.14.0"
glob = "0.3.1"
hound = "3.5.1"
indoc = "2.0.5"
md5 = "0.7.0"
regex = "1.10.2"
regex-macro = "0.2.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

[lib]
name = "regolith"

[[bin]]
name = "rc"

[[bin]]
name = "compile_all"
